@@ -29,7 +29,8 @@
 # of the list.
 from _MenuOptions import MenuOptions, \
     NumberOption, FloatOption, BooleanOption, TextOption, \
-    EnumeratedListOption, FilterListOption, StringOption, ColourButtonOption, PeoplePickerOption
+    EnumeratedListOption, FilterListOption, StringOption, ColourButtonOption, \
+    PersonListOption
 from _PluginMgr import \
      register_export, register_import, \
      register_tool, register_report, \
