@@ -1,3 +1,9 @@
+2007-12-30  Brian Matherly <brian@gramps-project.org>
+	* src/plugins/GVFamilyLines.py:
+	* src\PluginUtils\__init__.py:
+	* src\PluginUtils\_MenuOptions.py:
+	Rename "PeoplePickerOption" to "PersonListOption".
+
 2007-12-30  Stéphane Charette  <stephanecharette@gmail.com>
 	* src/ReportBase/_GraphvizReportDialog.py: write out the .dot file
 	using ISO-8859 instead of UTF-8 (allows for things like accented chars)
